--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <title>JSMiner</title>
     <SCRIPT src="//code.jquery.com/jquery-1.11.0.min.js"></SCRIPT>
-    <script src="/public/sha256.js"></script>
-    <script src="/public/util.js"></script>
-    <SCRIPT src="/public/glminer.js"></SCRIPT>
-    <SCRIPT src="/public/work-manager.js"></SCRIPT>
+    <script src="public/sha256.js"></script>
+    <script src="public/util.js"></script>
+    <SCRIPT src="public/glminer.js"></SCRIPT>
+    <SCRIPT src="public/work-manager.js"></SCRIPT>
 </head>
 
 <BODY>
